--- a/change_order.html
+++ b/change_order.html
@@ -18,7 +18,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/tablets.css">
+		<link rel="stylesheet" href="./css/tablets.css" />
 		<title>Chỉnh sửa đơn | Nhân viên thu mua</title>
 	</head>
 	<body>
@@ -27,7 +27,9 @@
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="list_order_customer.html">Danh sách khách hàng</a>
+							<a class="nav-link" href="list_order_customer.html"
+								>Danh sách khách hàng</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link current" href="save_list_order.html"
@@ -35,7 +37,9 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="submited_list_order.html">Danh sách đơn đã gửi</a>
+							<a class="nav-link" href="submited_list_order.html"
+								>Danh sách đơn đã gửi</a
+							>
 						</li>
 					</ul>
 				</nav>
@@ -231,16 +235,90 @@
 					</div>
 					<!-- order footer -->
 					<div class="order-footer">
-						<a class="btn btn-success" href="save_list_order.html">
-							Submit
-						</a>
+						
+						<td>
+									<div class="container d-inline">
+										<a class="btn btn-success change-info" href="save_list_order.html"
+										data-toggle=""
+										>
+										Chỉnh sửa
+										</a>
+										<button
+											class="change-btn"
+											type="button"
+											data-toggle="modal"
+											data-target="#change-tea-type"
+										>
+											<i class="fas fa-edit text-primary"></i>
+										</button>
+										<!-- Modal -->
+										<div
+											class="modal fade text-left"
+											id="change-tea-type"
+											role="dialog"
+										>
+											<div class="modal-dialog">
+												<!-- Modal content-->
+												<div class="modal-content">
+													<div class="modal-header">
+														<h4 class="modal-title">
+															Thay đổi thông tin loại chè
+														</h4>
+													</div>
+													<div class="modal-body">
+														<form action="">
+															<div class="form-group">
+																<input
+																	type="text"
+																	class="form-control"
+																	placeholder="Giá chỉnh sửa"
+																/>
+															</div>
+															<div class="form-group">
+																<input
+																	type="text"
+																	class="form-control"
+																	placeholder="Khấu trừ tối đa"
+																/>
+															</div>
+
+															<div class="form-group">
+																<label for="date-apply">Ngày áp dụng</label>
+																<input
+																	id="date-apply"
+																	type="datetime-local"
+																	class="form-control"
+																/>
+															</div>
+															<input
+																type="submit"
+																value="Chỉnh sửa"
+																class="btn btn-primary"
+															/>
+														</form>
+													</div>
+													<div class="modal-footer">
+														<button
+															type="button"
+															class="btn btn-default"
+															data-dismiss="modal"
+														>
+															Hủy
+														</button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									
+								</td>
 						<a
 							class="btn btn-success save-btn mx-2"
 							href="save_list_order.html"
 						>
 							Lưu
 						</a>
-						<a class="btn btn-danger cancel-btn" href="index.html">
+						<a class="btn btn-danger cancel-btn" href="save_list_order.html">
 							Hủy
 						</a>
 					</div>
