--- a/list_type_tea.html
+++ b/list_type_tea.html
@@ -80,7 +80,6 @@
 						</div>
 					</div>
 				</div>
-
 				<!-- table info section -->
 				<div class="container text-center mt-5">
 					<h3 class="list-tea-header text-left py-2">
@@ -190,7 +189,7 @@
 												<!-- Modal content-->
 												<div class="modal-content">
 													<div class="modal-header">
-														<h4 class="modal-title">
+														<h4 class="modal-title text-center">
 															Xóa loại chè này
 														</h4>
 													</div>
@@ -312,7 +311,7 @@
 												<!-- Modal content-->
 												<div class="modal-content">
 													<div class="modal-header">
-														<h4 class="modal-title">
+														<h4 class="modal-title text-center">
 															Xóa loại chè này
 														</h4>
 													</div>
@@ -433,7 +432,7 @@
 												<!-- Modal content-->
 												<div class="modal-content">
 													<div class="modal-header">
-														<h4 class="modal-title">
+														<h4 class="modal-title text-center">
 															Xóa loại chè này
 														</h4>
 													</div>
@@ -554,7 +553,7 @@
 												<!-- Modal content-->
 												<div class="modal-content">
 													<div class="modal-header">
-														<h4 class="modal-title">
+														<h4 class="modal-title text-center">
 															Xóa loại chè này
 														</h4>
 													</div>
@@ -675,7 +674,7 @@
 												<!-- Modal content-->
 												<div class="modal-content">
 													<div class="modal-header">
-														<h4 class="modal-title">
+														<h4 class="modal-title text-center">
 															Xóa loại chè này
 														</h4>
 													</div>
@@ -795,7 +794,7 @@
 											<div class="modal-dialog">
 												<!-- Modal content-->
 												<div class="modal-content">
-													<div class="modal-header">
+													<div class="modal-header text-center">
 														<h4 class="modal-title">
 															Xóa loại chè này
 														</h4>
